# cloudreve-cli

./: .gitignore  .pre-commit-config.yaml  README.md  devbox.json  pyproject.toml
.copilot/: copilot-instructions.md
src/cloudreve_cli/: __init__.py  cli.py  client.py  config.py  exceptions.py  exit_codes.py  models.py
src/cloudreve_cli/commands/: auth.py  files.py  site.py  storage.py  workflow.py
src/cloudreve_cli/utils/: output.py  uri.py
tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_files_ls.py  test_output.py  test_site_ping.py  test_storage.py  test_uri.py  test_workflow.py
