[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudreve-cli"
version = "0.1.0"
description = "Full-coverage CLI for the Cloudreve v4 API"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "tomli-w",
]

[project.scripts]
cloudreve = "cloudreve_cli.cli:main"

[dependency-groups]
dev = ["ruff>=0.8", "pytest>=8.0", "pytest-httpx>=0.35"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["cloudreve_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
